add synchronous VM boot scripts
